--- a/style/index.css
+++ b/style/index.css
@@ -83,7 +83,7 @@ audio,
 video {
   margin: 0;
   padding: 0;
-  border: 0;
+  /* border: 0; */
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
@@ -124,5 +124,16 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+* {
+  box-sizing: border-box;
+  max-width: 100%;
+  border: 1px solid red;
+}
+html {
+  font-size: 62.5%;
+}
 
 /* Header Styling */
+header h1 {
+  font-size: 6rem;
+}
