--- a/style/index.css
+++ b/style/index.css
@@ -125,6 +125,7 @@ table {
   border-spacing: 0;
 }
 * {
+  color: #1f1f1f;
   box-sizing: border-box;
   max-width: 100%;
   border: 1px solid red;
@@ -158,6 +159,10 @@ header nav a {
   padding: 1% 3%;
   text-decoration: none;
   text-shadow: 0 0 2px #184e77;
+  transition: 0.2s;
+}
+header nav a:hover {
+  box-shadow: 0 0 0.8rem #184e77;
 }
 
 /* Main Section */
@@ -190,26 +195,36 @@ button {
 }
 button:hover {
   cursor: pointer;
-  box-shadow: 0 0 0.2rem #184e77;
+  box-shadow: 0 0 0.8rem #184e77;
 }
 section.main div.right-side p {
   font-size: 3rem;
   margin: 1% 0;
 }
 section.main div img {
-  width: ;
+  border-radius: 2rem;
+  height: 50vh;
+  width: 48vw;
 }
 
 /* Gallery Section */
 
 section.gallery {
+  display: flex;
+  justify-content: space-between;
   margin: 1%;
 }
 section.gallery div {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 section.gallery div img {
+  border-radius: 2rem;
   width: 20vw;
+}
+section.gallery p {
+  font-size: 3rem;
+  margin: 2% 0;
+  text-align: center;
 }
