--- a/style/index.css
+++ b/style/index.css
@@ -168,7 +168,7 @@ header nav a {
   background-color: #1a759f;
   color: #ffffff;
   font-size: 1.6rem;
-  padding: 1% 3%;
+  padding: 1rem 3%;
   text-align: center;
   text-decoration: none;
   text-shadow: 0 0 2px #184e77;
@@ -261,10 +261,8 @@ footer {
 }
 footer h2 {
   font-size: 4rem;
-  margin-bottom: 2%;
 }
 footer a.button {
-  margin-top: 2%;
   padding: 2rem 6rem;
 }
 a.twitter {
@@ -278,6 +276,16 @@ a.twitter {
 
 /* ========== Media Queries ========== */
 
+@media (max-width: 800px) {
+  .banner-left {
+    align-items: center;
+    display: flex;
+  }
+  .gallery-card {
+    width: 30%;
+  }
+}
+
 @media (max-width: 500px) {
   header h1 {
     text-align: center;
@@ -288,14 +296,23 @@ a.twitter {
   }
   header nav a {
     margin: 0 auto;
-    width: 40%;
+    padding: 2rem 0;
+    min-width: 30%;
   }
   div.banner-content {
     flex-flow: column wrap;
+    margin: 5% 0;
   }
   div.banner-left,
   div.banner-right {
     width: 100%;
+  }
+  div.banner-left {
+    padding: 0 5%;
+  }
+  div.banner-right {
+    justify-content: center;
+    text-align: center;
   }
   div.gallery-content {
     justify-content: space-around;
